storage/innobase/log/log0recv.cc
@@ -4001,6 +4001,7 @@ skip_apply:
 	mutex_enter(&recv_sys->mutex);
 
 	recv_sys->apply_log_recs = TRUE;
+	recv_no_ibuf_operations = is_mariabackup_restore_or_export();
 
 	mutex_exit(&recv_sys->mutex);
 
